--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,6 +8,7 @@ output: html_document
 
 ### **Loading and preprocessing the data**  
 ```{r echo=TRUE}
+setwd("/home/thodoris/Courses/DataScience/Reproducible_Research/week-2/project/RepData_PeerAssessment1/")
 df <- read.csv("./activity.csv", header=TRUE, stringsAsFactors=TRUE)
 ```
   
@@ -19,15 +20,16 @@ stepsPerDay <- aggregate(x=list("daily_steps"=df$steps), by=list("date" = df$dat
                          FUN=sum, na.rm=TRUE)
 ```  
 - #### Make a histogram of the total number of steps taken each day.  
-```{r echo=TRUE}
+```{r echo=TRUE, include=TRUE}
 hist(stepsPerDay$daily_steps, breaks=nrow(stepsPerDay)/2, col="blue", 
      main="Daily steps", xlab="Number of steps")
 ```
+
 ```{r results='hide'}
 dev.copy(png, file="./figure/steps_hist1.png", width=480, height=480, units = "px")
 dev.off()
 ```  
-  
+
 - #### Calculate and report the mean and median of the total number of steps taken per day.
 ```{r echo=TRUE}
 mean(stepsPerDay$daily_steps)
@@ -37,7 +39,7 @@ median(stepsPerDay$daily_steps)
 ### **What is the average daily activity pattern?**  
 
 - #### Make a time series plot.
-```{r echo=TRUE}
+```{r echo=TRUE,  include=TRUE}
 stepsPerInt <- aggregate(x=list("int_steps"=df$steps), by=list("interval" = df$interval), FUN=mean, na.rm=TRUE)
 plot(stepsPerInt$interval, stepsPerInt$int_steps, type="l", 
      xlab="Daily interval", ylab="Mean of steps", main="Average steps for each daily interval")
@@ -71,7 +73,7 @@ for(i in 1:nrow(df)) {
 ```  
   
 - #### Calculate the total number of steps taken per day / histogram/ mean and median.
-```{r echo=TRUE}
+```{r echo=TRUE,  include=TRUE}
 stepsPerDay <- aggregate(x=list("daily_steps"=df$steps), by=list("date" = df$date), 
                          FUN=sum, na.rm=TRUE)
 
@@ -86,7 +88,7 @@ dev.off()
 ```
   
 ### **Are there differences in activity patterns between weekdays and weekends?**  
-```{r}
+```{r, echo=TRUE, include=TRUE}
 df$date <- weekdays(as.Date(df$date))
 c <- sapply(1:nrow(df), function(i){
     if (df[i,2] == "Saturday" ||  df[i,2] == "Sunday") {
