--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "Reproducible Research - Peer Assessment 1"
-author: "thodk"
-date: "12/20/2015"
 output: html_document
 ---
 
@@ -14,23 +12,20 @@ df <- read.csv("./activity.csv", header=TRUE, stringsAsFactors=TRUE)
   
   
 ### **What is mean total number of steps taken per day?** 
-- #### Calculate the total number of steps taken per day.
+-  Calculate the total number of steps taken per day.
 ```{r echo=TRUE}
 stepsPerDay <- aggregate(x=list("daily_steps"=df$steps), by=list("date" = df$date), 
                          FUN=sum, na.rm=TRUE)
 ```  
-- #### Make a histogram of the total number of steps taken each day.  
+-  Make a histogram of the total number of steps taken each day.  
 ```{r echo=TRUE, include=TRUE}
 hist(stepsPerDay$daily_steps, breaks=nrow(stepsPerDay)/2, col="blue", 
      main="Daily steps", xlab="Number of steps")
 ```
+![steps_hist1.png](./figure/steps_hist1.png)
 
-```{r results='hide'}
-dev.copy(png, file="./figure/steps_hist1.png", width=480, height=480, units = "px")
-dev.off()
-```  
 
-- #### Calculate and report the mean and median of the total number of steps taken per day.
+-  Calculate and report the mean and median of the total number of steps taken per day.
 ```{r echo=TRUE}
 mean(stepsPerDay$daily_steps)
 median(stepsPerDay$daily_steps)
@@ -38,32 +33,30 @@ median(stepsPerDay$daily_steps)
   
 ### **What is the average daily activity pattern?**  
 
-- #### Make a time series plot.
+-  Make a time series plot.
 ```{r echo=TRUE,  include=TRUE}
 stepsPerInt <- aggregate(x=list("int_steps"=df$steps), by=list("interval" = df$interval), FUN=mean, na.rm=TRUE)
 plot(stepsPerInt$interval, stepsPerInt$int_steps, type="l", 
      xlab="Daily interval", ylab="Mean of steps", main="Average steps for each daily interval")
 ```
-```{r results='hide'}
-dev.copy(png, file="./figure/daily_pattern.png", width=480, height=480, units = "px")
-dev.off()
-```  
+![daily_pattern](./figure/daily_pattern.png)
 
-- #### Which 5-minute interval, contains the maximum number of steps?
+
+-  Which 5-minute interval, contains the maximum number of steps?
 ```{r echo=TRUE}
 stepsPerInt$interval[which(stepsPerInt$int_steps==max(stepsPerInt$int_steps))]
 ```  
   
   
 ### **Imputing missing values**  
-- #### Calculate and report the total number of missing values in the dataset.
+-  Calculate and report the total number of missing values in the dataset.
 
 ```{r echo=TRUE}
 nas = which(is.na(df$steps))
 length(nas)
 ``` 
 
-- ####  Fill in all of the missing values in the dataset.
+-  Fill in all of the missing values in the dataset.
 ```{r echo=TRUE}
 for(i in 1:nrow(df)) {
   if (is.na(df[i,1])){
@@ -72,7 +65,7 @@ for(i in 1:nrow(df)) {
 }
 ```  
   
-- #### Calculate the total number of steps taken per day / histogram/ mean and median.
+- Calculate the total number of steps taken per day / histogram/ mean and median.
 ```{r echo=TRUE,  include=TRUE}
 stepsPerDay <- aggregate(x=list("daily_steps"=df$steps), by=list("date" = df$date), 
                          FUN=sum, na.rm=TRUE)
@@ -82,10 +75,9 @@ hist(stepsPerDay$daily_steps, breaks=nrow(stepsPerDay)/2, col="blue",
 mean(stepsPerDay$daily_steps)
 median(stepsPerDay$daily_steps)
 ``` 
-```{r results='hide'}
-dev.copy(png, file="./figure/steps_hist2.png", width=480, height=480, units = "px")
-dev.off()
-```
+![steps_hist2](./figure/steps_hist2.png)
+
+
   
 ### **Are there differences in activity patterns between weekdays and weekends?**  
 ```{r, echo=TRUE, include=TRUE}
@@ -103,7 +95,4 @@ library(lattice)
 xyplot(int_steps~interval | w, data=stepsPerInt, layout=c(1,2), type="l",
        xlab="5-min daily interval", ylab="numer of steps")
 ```
-```{r results='hide'}
-dev.copy(png, file="./figure/pattern2.png", width=480, height=480, units = "px")
-dev.off()
-```
+![pattern2](./figure/pattern2.png)
